# Education-System-Analysis

./: .gitignore  CHANGELOG.md  PROJECT_MEMORY.md  README.md  pyproject.toml  requirements.txt
data/: Indicators.xlsx  choice and conso of indicators.xlsx  corr_flat_table.csv  fill_rate_per_group.csv  flattened_correlation_table_simple.csv
notebooks/: 01_data_loading.ipynb  02_processing.ipynb  03_scoring_results.ipynb  Project 2 FINAL.ipynb
notebooks/OLD/: Project 2 V1.ipynb  Project 2 V2.ipynb  Project 2 V3.ipynb  Project_2_V5.ipynb
outputs/: Project 2 FINAL.ipynb  REX.docx  desktop.ini  environment.yaml
scripts/: split_notebook.py
