[tool.poetry]
name = "education-system-analysis"
version = "0.1.0"
description = "World Bank EdStats exploratory data analysis (Open Classrooms Projet 2)"
authors = ["Shahu"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3"
pandas = "^2.3"
matplotlib = "^3.10"
seaborn = "^0.13"
scipy = "^1.16"
scikit-learn = "^1.7"
plotly = "^6.3"
missingno = "^0.5"
geopandas = "^1.1"
pycountry = "^24.6"
openpyxl = "^3.1"
ipykernel = "^6.30"
nbconvert = "^7.16"
pyarrow = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
